--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 				<artifactId>maven-jxr-plugin</artifactId>
 				<version>2.5</version>
             </plugin>
+            <plugin>
+      			<groupId>org.codehaus.mojo</groupId>
+      			<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.6</version>
+    		</plugin>
 		</plugins>
 	</reporting>
 </project>
