--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
       			<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.6</version>
     		</plugin>
+    		<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
 		</plugins>
 	</reporting>
 </project>
