--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,15 @@
 				<artifactId>maven-pmd-plugin</artifactId>
 				<version>2.5</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-changelog-plugin</artifactId>
+			</plugin>
 		</plugins>
 	</reporting>
+	<!-- scm>
+		<connection>scm:git:git@github.com:StephaneMangin/SIR.git</connection>
+ 		<url>scm:git:git@github.com:StephaneMangin/SIR.git</url>
+ 		<developerConnection>scm:git:git@github.com:StephaneMangin/SIR.git</developerConnection>
+	</scm-->
 </project>
